--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
